tests/integration/tests/macros/ui/fail/safe_unique_field_proof_cannot_be_forged.rs
use reinhardt_db::orm::UniqueFieldRef;

struct Article;

fn main() {
    let _ = UniqueFieldRef::<Article, String>::from_model_field("title");
}
